Fix overflow scrolling on mobile devices

--- a/css/index.css
+++ b/css/index.css
@@ -28,6 +28,8 @@ body {
 
 body {
   background: #90dfaa;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 .info {
